--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,11 +1,12 @@
-<h1>{{title}}</h1>
-<ul>
-  <!-- <li *ngFor="let user of users">
+<app-nav />
+<div class="container" style="margin-top: 100px">
+  <app-home />
+  <ul>
+    <!-- <li *ngFor="let user of users">
     {{user.id}} - {{user.userName}}
   </li> -->
-  @for(user of users; track user.id){
-    <li>
-      {{user.id}} - {{user.userName}}
-    </li>
-  }
-</ul>
+    <!-- @for(user of users; track user.id){
+    <li>{{ user.id }} - {{ user.userName }}</li>
+    } -->
+  </ul>
+</div>
