--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-nav />
 <div class="container" style="margin-top: 100px">
-  <app-home />
+  <router-outlet />
   <ul>
     <!-- <li *ngFor="let user of users">
     {{user.id}} - {{user.userName}}
