--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -16,6 +16,9 @@
           <a class="nav-link" (click)="Logout()">Logout</a>
         </li>
       }
+      <li class="nav-item">
+          <a routerLink="/errors" routerLinkActive="active" class="nav-link">Errors</a>
+        </li>
     </ul>
     @if(accountService.currentUser()){
     <div dropdown class="dropdown">
