--- a/Client/src/app/errors/not-found/not-found.component.html
+++ b/Client/src/app/errors/not-found/not-found.component.html
@@ -1,4 +1,9 @@
 <div class="container text-center">
     <h1>Not Found</h1>
+    <p class="text-danger">
+        <b>
+            The page you're looking for is not found.
+        </b>
+    </p>
     <button class="btn btn-info btn-lg" routerLink="/">Return to home page</button>
 </div>
