--- a/Client/src/app/errors/server-error/server-error.component.html
+++ b/Client/src/app/errors/server-error/server-error.component.html
@@ -22,7 +22,7 @@
     Following is the stack trace - check the first 2 lines, this tells you
     exactly which line caused the problem!
   </p>
-  <code class="mt-5" style="background-color: whitesmoke">
+  <code class="mt-5">
     {{ error.details }}
   </code>
 </div>
