--- a/Client/src/app/members/member-detail/member-detail.component.html
+++ b/Client/src/app/members/member-detail/member-detail.component.html
@@ -1,1 +1,59 @@
-<p>member-detail works!</p>
+@if (member) {
+<div class="row">
+  <div class="col-md-4">
+    <div class="card">
+      <img
+        src="{{ member.photoUrl || './assets/user.png' }}"
+        alt="{{ member.knownAs }}"
+        class="card-img img-thumbnail"
+      />
+    </div>
+    <div class="card-body">
+      <div>
+        <b>Location:</b>
+        <p>{{ member.city }}, {{ member.city }}</p>
+      </div>
+      <div>
+        <b>Age:</b>
+        <p>{{ member.age }}</p>
+      </div>
+      <div>
+        <b>Last Active</b>
+        <p>{{ member.lastActive }}</p>
+      </div>
+      <div>
+        <b>Member since:</b>
+        <p>{{ member.createdAt }}</p>
+      </div>
+    </div>
+    <div class="card-footer">
+      <div class="btn-group d-flex">
+        <button class="btn btn-primary">Like</button>
+        <button class="btn btn-success">Message</button>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-8">
+    <tabset class="member-tabset">
+      <tab heading="About {{ member.knownAs }}">
+        <h4>Description</h4>
+        <p>{{ member.introduction }}</p>
+        <h4>Looking for</h4>
+        <p>{{ member.lookingFor }}</p>
+      </tab>
+      <tab heading="Interents">
+        <h4>Interents</h4>
+        <p>{{ member.interests }}</p>
+      </tab>
+      <tab heading="Photos" #photoTab="tab">
+        @if (photoTab.active) {
+        <gallery [items]="images" class="gallery"> </gallery>
+        }
+      </tab>
+      <tab heading="Messages">
+        <p>Messages will go here</p>
+      </tab>
+    </tabset>
+  </div>
+</div>
+}
