--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -24,7 +24,7 @@
     <div dropdown class="dropdown">
       <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Wellcome {{ model.username | titlecase }}</a>
       <div *dropdownMenu class="dropdown-menu">
-        <a class="dropdown-item">Edit profile</a>
+        <a routerLink="/member/edit" class="dropdown-item">Edit profile</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" (click)="Logout()">Logout</a>
       </div>
