--- a/Client/src/app/members/member-detail/member-detail.component.html
+++ b/Client/src/app/members/member-detail/member-detail.component.html
@@ -47,7 +47,14 @@
       </tab>
       <tab heading="Photos" #photoTab="tab">
         @if (photoTab.active) {
-        <gallery [items]="images" class="gallery"> </gallery>
+        <gallery 
+          [items]="images" 
+          class="gallery" 
+          counter="true"
+          itemAutosize="false"
+          > 
+
+        </gallery>
         }
       </tab>
       <tab heading="Messages">
