--- a/Client/src/app/members/member-edit/member-edit.component.html
+++ b/Client/src/app/members/member-edit/member-edit.component.html
@@ -93,7 +93,7 @@
         </form>
       </tab>
       <tab heading="Edit Photos">
-        <p>Photo edit will go here</p>
+        <app-photo-editor [member]="member" (memberChange)="onMemberChange($event)"/>
       </tab>
     </tabset>
   </div>
