--- a/Client/src/app/nav/nav.component.css
+++ b/Client/src/app/nav/nav.component.css
@@ -1,3 +1,12 @@
 .dropdown-toggle, .dropdown-item {
     cursor: pointer;
 }
+img {
+    max-height: 50px;
+    max-width: 50px;
+    border-radius: 50%;
+    border: 2px solid white;
+    display: inline;
+    
+
+}
