--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -23,7 +23,7 @@
     @if(accountService.currentUser()){
     <div dropdown class="dropdown">
       <img class="me-2" 
-        src="{{accountService.currentUser()?.photoUrl || '/assets/user.png'}}" 
+        src="{{accountService.currentUser()?.photoUrl || 'assets/user.png'}}" 
         alt="{{accountService.currentUser()?.username +'`s main image'}}">
       <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Wellcome {{ model.username | titlecase }}</a>
       <div *dropdownMenu class="dropdown-menu">
