--- a/Client/src/app/members/member-edit/member-edit.component.html
+++ b/Client/src/app/members/member-edit/member-edit.component.html
@@ -32,11 +32,11 @@
       </div>
       <div>
         <b>Last Active</b>
-        <p>{{ member.lastActive }}</p>
+        <p>{{ member.lastActive | timeago }}</p>
       </div>
       <div>
         <b>Member since:</b>
-        <p>{{ member.createdAt }}</p>
+        <p>{{ member.createdAt | date: 'dd MMMM yyyy'}}</p>
       </div>
     </div>
     <div class="card-footer">
