--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -1,35 +1,58 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active">
+      <i class="bi bi-house"></i>
+    </a>
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       @if(accountService.currentUser()){
-        <li class="nav-item">
-          <a routerLink="/members" routerLinkActive="active" class="nav-link">Matches</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="Logout()">Logout</a>
-        </li>
-      }
       <li class="nav-item">
-          <a routerLink="/errors" routerLinkActive="active" class="nav-link">Errors</a>
-        </li>
+        <a routerLink="/members" routerLinkActive="active" class="nav-link">
+          <i class="bi bi-people-fill"></i> Matches
+        </a>
+      </li>
+      &nbsp;&nbsp;&nbsp;
+      <li class="nav-item">
+        <a routerLink="/lists" routerLinkActive="active" class="nav-link">
+          <i class="bi bi-list"></i> Lists
+        </a>
+      </li>
+      &nbsp;&nbsp;&nbsp;
+      <li class="nav-item">
+        <a routerLink="/messages" routerLinkActive="active" class="nav-link">
+          <i class="bi bi-chat-dots-fill"></i> Messages
+        </a>
+      </li>
+      &nbsp;&nbsp;&nbsp;
+      <li class="nav-item">
+        <a class="nav-link" (click)="Logout()">
+          <i class="bi bi-escape"></i> Logout
+        </a>
+      </li>
+      &nbsp;&nbsp;&nbsp; }
+      <li class="nav-item">
+        <a routerLink="/errors" routerLinkActive="active" class="nav-link"
+          >Errors</a
+        >
+      </li>
     </ul>
     @if(accountService.currentUser()){
     <div dropdown class="dropdown">
-      <img class="me-2" 
-        src="{{accountService.currentUser()?.photoUrl || 'assets/user.png'}}" 
-        alt="{{accountService.currentUser()?.username +'`s main image'}}">
-      <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Wellcome {{ model.username | titlecase }}</a>
+      <img
+        class="me-2"
+        src="{{ accountService.currentUser()?.photoUrl || 'assets/user.png' }}"
+        alt="{{ accountService.currentUser()?.username + '`s main image' }}"
+      />
+      <button dropdownToggle class="btn dropdown-toggle text-light text-decoration-none"
+        >Hello, {{ model.username | titlecase }}</button
+      >
       <div *dropdownMenu class="dropdown-menu">
-        <a routerLink="/member/edit" class="dropdown-item">Edit profile</a>
+        <a routerLink="/member/edit" class="dropdown-item">
+          <i class="bi bi-pencil-square"></i> Edit Profile
+        </a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" (click)="Logout()">Logout</a>
+        <a class="dropdown-item" (click)="Logout()">
+          <i class="bi bi-escape"></i> Logout
+        </a>
       </div>
     </div>
     } @if(!accountService.currentUser()){
@@ -53,7 +76,10 @@
         name="password"
         [(ngModel)]="model.password"
       />
-      <button class="btn btn-success" type="submit">Login</button>
+      <button class="btn btn-success text-start" type="submit">
+        <!-- <i class="bi bi-person-fill-up"></i>  -->
+         Login
+      </button>
     </form>
     }
   </div>
