--- a/Client/src/app/members/member-card/member-card.component.html
+++ b/Client/src/app/members/member-card/member-card.component.html
@@ -1,34 +1,47 @@
 <div class="card mb-4">
   <div class="card-img-wrapper">
-    <img src="{{ member().photoUrl || './assets/user.png' }}" alt="{{member().knownAs}}" class="card-img-top">
+    <img
+      src="{{ member().photoUrl || accountService.defaultImage }}"
+      alt="{{ member().knownAs }}"
+      class="card-img-top"
+    />
+    @if (showButtons()) {
     <ul class="list-inline member-icons animate text-center">
-        <li class="list-inline-item">
-            <button routerLink="/members/{{member().username}}" class="btn btn-primary"><i class="fa fa-user"></i></button>
-        </li>
-          <li class="list-inline-item">
-            <button class="btn btn-primary"><i class="fa fa-heart"></i> </button>
-        </li>
-          <li class="list-inline-item">
-            <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
-        </li>
+      <li class="list-inline-item">
+        <button routerLink="/members/{{ member().username }}" class="btn">
+          <i class="bi bi-person-fill"></i>
+        </button>
+      </li>
+      <li class="list-inline-item">
+        <button (click)="toggleLike()" class="btn">
+          @if (hasLiked()) {
+          <i class="bi bi-heart-fill text-danger"></i>
+          }@else{
+          <i class="bi bi-heart-fill"></i>
+          }
+        </button>
+      </li>
+      <li class="list-inline-item">
+        <button class="btn btn"><i class="bi bi-envelope-fill"></i></button>
+      </li>
     </ul>
+    }
   </div>
   <div class="card-body p-1">
     <p class="card-title text-center mb-1">
-        <b>
-          @if (member().gender.toLowerCase() === 'female') {
-            <i class="bi bi-person-standing-dress fs-5"></i>
-             {{member().knownAs}}, {{member().age}} Yrs
-          }@else {
-            <i class="bi bi-person-standing fs-5"></i>
-             {{member().knownAs}}, {{member().age}} Yrs
-          }
-       
-        </b>
+      <b>
+        @if (member().gender.toLowerCase() === 'female') {
+        <i class="bi bi-person-standing-dress fs-5"></i>
+        {{ member().knownAs }}, {{ member().age }} Yrs }@else {
+        <i class="bi bi-person-standing fs-5"></i>
+        {{ member().knownAs }}, {{ member().age }} Yrs } @if (hasLiked()){
+        <i class="bi bi-heart-fill text-danger"></i>
+        }
+      </b>
     </p>
     <p class="card-text text-muted text-center">
       <i class="bi bi-geo-alt-fill"></i>
-        {{member().city}},{{member().country}}
+      {{ member().city }},{{ member().country }}
     </p>
   </div>
 </div>
