--- a/Client/src/app/members/member-edit/member-edit.component.html
+++ b/Client/src/app/members/member-edit/member-edit.component.html
@@ -1,101 +1,163 @@
 @if (member) {
-<div class="row">
-  <div class="col-md-4">
-    <h1>Your profile</h1>
-  </div>
-  <div class="col-md-8">
-    @if(editForm.dirty) {
-    <div class="alert alert-info pb-0">
-      <p>
-        <b>Information:</b> You have made changes. Any unsaved changes will be
-        lost
-      </p>
-    </div>
-    }
-  </div>
-  <div class="col-md-4">
-    <div class="card">
-      <img
-        src="{{ member.photoUrl || './assets/user.png' }}"
-        alt="{{ member.knownAs }}"
-        class="card-img img-thumbnail"
-      />
-    </div>
-    <div class="card-body">
-      <div>
-        <b>Location:</b>
-        <p>{{ member.city }}, {{ member.city }}</p>
-      </div>
-      <div>
-        <b>Age:</b>
-        <p>{{ member.age }}</p>
-      </div>
-      <div>
-        <b>Last Active</b>
-        <p>{{ member.lastActive | timeago }}</p>
-      </div>
-      <div>
-        <b>Member since:</b>
-        <p>{{ member.createdAt | date: 'dd MMMM yyyy'}}</p>
-      </div>
-    </div>
-    <div class="card-footer">
-      <button [disabled]="!editForm.dirty" form="editForm" type="submit" class="btn btn-success col-md-12">
-        Save Changes
-      </button>
+<div class="container-fluid">
+  <!--Header row-->
+  <div class="row">
+    <div class="col-12">
+      <h3 class="text-center">{{ member.knownAs }}'s profile</h3>
+      <hr />
     </div>
   </div>
-  <div class="col-md-8">
-    <tabset class="member-tabset">
-      <tab heading="About {{ member.knownAs }}">
-        <form id="editForm" #editForm="ngForm" (ngSubmit)="updateMember()">
-          <h4 class="mt-2">Introduction</h4>
-          <textarea
-            class="form-control"
-            name="introduction"
-            [(ngModel)]="member.introduction"
-            rows="6"
-          >
-          </textarea>
-          <h4 class="mt-2">Looking For</h4>
-          <textarea
-            class="form-control"
-            name="lookingFor"
-            [(ngModel)]="member.lookingFor"
-            rows="6"
-          >
-          </textarea>
-          <h4 class="mt-2">Interests</h4>
-          <textarea
-            class="form-control"
-            name="interests"
-            [(ngModel)]="member.interests"
-            rows="6"
-          >
-          </textarea>
-          <h4 class="mt-2">Location Details</h4>
-          <div class="d-flex align-items-center">
-            <label>City:</label>
-            <input
-              type="tex"
-              [(ngModel)]="member.city"
-              class="form-control mx-2"
-              name="city"
-            />
-            <label>Country:</label>
-            <input
-              type="tex"
-              [(ngModel)]="member.country"
-              class="form-control mx-2"
-              name="country"
-            />
+
+  <!--Alert-->
+  <div class="row mb-3">
+    <div class="col-12">
+      @if(editForm.dirty) {
+      <div class="alert alert-info">
+        <p class="mb-0">
+          <b>Information:</b> You have made changes. Any unsaved changes will be
+          lost
+        </p>
+      </div>
+      }
+    </div>
+  </div>
+  <!--Main content-->
+  <div class="row g-4">
+    <div class="col-12 col-lg-4 order-1 order-lg-1">
+      <div class="card">
+        <!--Profile info-->
+        <div class="card-header mt-3">
+          <div class="row g-1">
+            <div class="col-6">
+              <app-member-card [member]="member" />
+            </div>
+            <div class="col-6">
+              <div class="text-start">
+                <p>
+                  <span><b>Last Active</b></span
+                  >{{ member.lastActive | timeago }}
+                </p>
+                <p>
+                  <span> <b>Member since:</b></span
+                  >{{ member.createdAt | date : "dd MMMM yyyy" }}
+                </p>
+              </div>
+            </div>
+            <!--Save button-->
+            <div class="col-12">
+              <button
+                [disabled]="!editForm.dirty"
+                form="editForm"
+                type="submit"
+                class="btn btn-success w-100"
+              >
+                Save Changes
+              </button>
+            </div>
           </div>
-        </form>
-      </tab>
-      <tab heading="Edit Photos">
-        <app-photo-editor [member]="member" (memberChange)="onMemberChange($event)"/>
-      </tab>
-    </tabset>
+        </div>
+      </div>
+    </div>
+    <!--Edit form-->
+    <div class="col-12 col-lg-8 order-2 order-lg-2">
+      <div class="card">
+        <div class="card-body">
+          <tabset class="member-tabset">
+            <tab heading="About {{ member.knownAs }}">
+              <form
+                id="editForm"
+                #editForm="ngForm"
+                (ngSubmit)="updateMember()"
+              >
+                <div class="row">
+                  <div class="col-6 col-sm-12 col-md-6 col-lg-6">
+                    <!--Introduction-->
+                    <div class="mb-4">
+                      <h4>Introduction</h4>
+                      <textarea
+                        class="form-control"
+                        name="introduction"
+                        [(ngModel)]="member.introduction"
+                        rows="4"
+                        placeholder="Tell us about yourself..."
+                      >
+                      </textarea>
+                    </div>
+                  </div>
+                  <div class="col-6 col-sm-12 col-md-6 col-lg-6">
+                    <!--Looking for-->
+                    <div class="mb-4">
+                      <h4>Looking For</h4>
+                      <textarea
+                        class="form-control"
+                        name="lookingFor"
+                        [(ngModel)]="member.lookingFor"
+                        rows="4"
+                        placeholder="What are you looking for?"
+                      >
+                      </textarea>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-6 col-sm-12 col-md-6 col-lg-6">
+                    <!--Interests-->
+                    <div class="mb-4">
+                      <h4>Interests</h4>
+                      <textarea
+                        class="form-control"
+                        name="interests"
+                        [(ngModel)]="member.interests"
+                        rows="4"
+                        placeholder="Your hobbies and interests"
+                      >
+                      </textarea>
+                    </div>
+                  </div>
+                  <div class="col-6 col-sm-12 col-md-6 col-lg-6">
+                    <!--Location details-->
+                    <div class="mb-4">
+                      <h4>Location Details</h4>
+                      <div class="row g-3">
+                        <div class="col-6 col-sm-12 col-md-12 col-lg-6">
+                          <label class="form-label">City:</label>
+                          <input
+                            type="text"
+                            [(ngModel)]="member.city"
+                            class="form-control"
+                            name="city"
+                            placeholder="Your city"
+                          />
+                        </div>
+                        <div class="col-6 col-sm-12 col-md-12 col-lg-6">
+                          <label class="form-label">Country:</label>
+                          <input
+                            type="text"
+                            [(ngModel)]="member.country"
+                            class="form-control"
+                            name="country"
+                            placeholder="Your country"
+                          />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </tab>
+
+            <tab heading="Edit Photos">
+              <div class="mt-3">
+                <app-photo-editor
+                  [member]="member"
+                  (memberChange)="onMemberChange($event)"
+                />
+              </div>
+            </tab>
+          </tabset>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 }
