--- a/Client/src/app/nav/nav.component.css
+++ b/Client/src/app/nav/nav.component.css
@@ -1,22 +1,31 @@
-.dropdown-toggle, .dropdown-item {
-    cursor: pointer;
+.dropdown-toggle,
+.dropdown-item {
+  cursor: pointer;
 }
 img {
-    max-height: 50px;
-    max-width: 50px;
-    border-radius: 50%;
-    border: 2px solid white;
-    display: inline;
-    
-
+  max-height: 50px;
+  max-width: 50px;
+  display: inline;
 }
 a {
-  border-radius: 1rem;
+  border-radius: 2rem;
   transition: background-color 0.3s ease;
+  font-size: 0.9rem !important;
+  color: white;
+  font-weight: bold;
 }
-a:hover {
-    background-color: rgb(120, 108, 143);
-    color: white;
-    transform: scale(1.02);
-    transition: 0.5s ease-in-out;
+
+a:hover ,.dark-text:hover {
+  background-color: rgb(82, 18, 199);
+  color: rgb(191, 218, 223) !important;
+  transform: scale(1.02);
+  transition: 0.5s ease-in-out;
+}
+nav {
+  background-color: rgb(34, 147, 159);
+  box-shadow: 0 0 8px rgb(1, 34, 37);
+}
+.home-hover:hover {
+  background-color: transparent !important;
+  color: white !important;
 }
