--- a/Client/src/app/register/register.component.html
+++ b/Client/src/app/register/register.component.html
@@ -1,5 +1,6 @@
-<form [formGroup]="registerForm" autocomplete="off">
-  <h2 class="text-center text-primary">Sign up</h2>
+<div class="container-fluid">
+  <form [formGroup]="registerForm" autocomplete="off">
+  <h5 class="text-center">Sign up</h5>
   <hr />
 
   <div class="mb-3 text-start">
@@ -91,7 +92,7 @@
       Confirm password must match password.
     </div>
   </div> -->
-  <div class="form-group text-center">
+  <div class="form-group text-center p-2">
     <button 
       class="btn btn-success me-2" 
       type="submit" 
@@ -113,6 +114,7 @@
       </select>
     </div> -->
 </form>
+</div>
 
 <!-- <p>Form value: {{ registerForm.value | json }}</p>
 <p>Form status: {{ registerForm.status | json }}</p> -->
