--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -1,4 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+  background-color: rgb(241, 233, 233);
+}
+a, button {
+  font-weight: bold !important;
+  font-size: 0.8rem !important;
+}
 .tab-panel {
   border: 1px solid #ddd;
   padding: 10px;
@@ -6,7 +14,7 @@
 }
 
 .nav-tabs > li.open, .member-tabset > .nav-tabs > li:hover {
-  border-bottom: 4px solid #fbcdcf;
+  border-bottom: 4px solid rgba(34, 147, 159,0.4);
 }
 
 .member-tabset > .nav-tabs > li.open > a, .member-tabset > .nav-tabs > li:hover > a {
@@ -24,7 +32,7 @@
 }
 
 .member-tabset > .nav-tabs > li.active {
-  border-bottom: 4px solid #E95420;
+  border-bottom: 4px solid rgb(34, 147, 159);
   position: relative;
 }
 
@@ -73,4 +81,7 @@
 .icon-with-tooltip:hover .tooltip-text {
   visibility: visible;
   opacity: 1;
+}
+.bi {
+    font-size: 1rem;
 }
