--- a/Client/src/app/messages/messages.component.html
+++ b/Client/src/app/messages/messages.component.html
@@ -1,1 +1,99 @@
-<p>messages works!</p>
+<div class="container-fluid mb-2">
+  <div class="row">
+    <div class="col-12">
+      <div class="btn-group">
+        <button
+          class="btn btn-primary"
+          btnRadio="Unread"
+          [(ngModel)]="container"
+          (click)="loadMessages()"
+        >
+          Unread
+        </button>
+        <button
+          class="btn btn-primary"
+          btnRadio="Inbox"
+          [(ngModel)]="container"
+          (click)="loadMessages()"
+        >
+          Inbox
+        </button>
+        <button
+          class="btn btn-primary"
+          btnRadio="Outbox"
+          [(ngModel)]="container"
+          (click)="loadMessages()"
+        >
+          Outbox
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      @if (!messageService.paginatedResult()?.items || messageService.paginatedResult()?.items?.length === 0) {
+      <h5>No messages</h5>
+      }@else {
+      <table class="table table-hover mt-3" style="cursor: pointer">
+        <thead>
+          <tr>
+            <th style="width: 40%">Message</th>
+            <th style="width: 20%">From / To</th>
+            <th style="width: 20%">Sent / Received</th>
+            <th style="width: 20%">Message</th>
+          </tr>
+        </thead>
+        <tbody class="align-middle">
+          @for (message of messageService.paginatedResult()?.items; track
+          message.id) {
+            <tr routerLink="{{getRoute(message)}}" [queryParams]="{tab: 'Messages'}">
+                <td>{{message.content}}</td>
+                <td>
+                    <div>
+                        <img 
+                            [src]="isOutbox
+                            ? (message.recipientPhotoUrl || accountService.defaultImage)
+                            : (message.senderPhotoUrl || accountService.defaultImage)"
+                            alt=""
+                            class="rounded-circle"
+                        >
+                        <strong> {{isOutbox
+                        ? message.recipientUsername : message.senderUsername}}</strong>
+                    </div>
+                </td>
+                <td>
+                    {{message.messageSent | timeago}}
+                </td>
+                <td (click)="$event.stopPropagation()">
+                    <button class="btn btn-danger" (click)="deleteMessage(message.id)">Delete</button>
+                </td>
+            </tr>
+          }
+        </tbody>
+      </table>
+      }
+    </div>
+  </div>
+   <!--Pagination-->
+  @if (messageService.paginatedResult()?.pagination && messageService.paginatedResult()?.pagination?.totalItems! > 0 ) {
+  <div class="row mt-4">
+    <div class="col-12 d-flex justify-content-center">
+      <pagination
+        [boundaryLinks]="true"
+        [totalItems]="(messageService.paginatedResult()?.pagination)!.totalItems"
+        [itemsPerPage]="
+          (messageService.paginatedResult()?.pagination)!.itemsPerPage
+        "
+        (pageChanged)="pageChanged($event)"
+        [(ngModel)]="messageService.paginatedResult()!.pagination!.currentPage"
+        [maxSize]="10"
+        previousText="&lsaquo;"
+        nextText="&rsaquo;"
+        firstText="&laquo;"
+        lastText="&raquo;"
+      >
+      </pagination>
+    </div>
+  </div>
+  }
+</div>
