--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -30,6 +30,11 @@
             <i class="bi bi-chat-dots-fill"></i> Messages
           </a>
         </li>
+          <li *appHasRole="['Admin', 'Moderator']" class="nav-item">
+          <a routerLink="/admin" routerLinkActive="active" class="nav-link">
+            <i class="bi bi-person-fill-gear"></i> Admin
+          </a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" (click)="Logout()">
             <i class="bi bi-escape"></i> Logout
