--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ngx-spinner type="ball-scale-ripple-multiple">
-  <h5>Please wait...</h5>
+  <!-- <h5>Please wait...</h5> -->
 </ngx-spinner>
 <app-nav />
 <div class="container" style="margin-top: 10px">
