--- a/Client/src/app/members/member-messages/member-messages.component.html
+++ b/Client/src/app/members/member-messages/member-messages.component.html
@@ -3,7 +3,11 @@
     @if (messageService.messageThread().length === 0) {
     <p>No messages yet.</p>
     }@else {
-    <ul class="chart">
+    <ul 
+      class="chart"
+      #scrollMe
+      style="overflow: scroll; max-height: 400px; scroll-behavior: smooth;"
+      >
       @for (message of messageService.messageThread(); track message.id) {
       <li>
         <div>
