--- a/Client/src/app/members/member-edit/member-edit.component.html
+++ b/Client/src/app/members/member-edit/member-edit.component.html
@@ -23,7 +23,7 @@
   </div>
   <!--Main content-->
   <div class="row g-4">
-    <div class="col-12 col-lg-4 order-1 order-lg-1">
+    <div class="col-12 col-lg-4 col-xl-4 order-1 order-lg-1">
       <div class="card">
         <!--Profile info-->
         <div class="card-header mt-3">
@@ -59,7 +59,7 @@
       </div>
     </div>
     <!--Edit form-->
-    <div class="col-12 col-lg-8 order-2 order-lg-2">
+    <div class="col-12 col-lg-8 col-xl-8 order-2 order-lg-2">
       <div class="card">
         <div class="card-body">
           <tabset class="member-tabset">
@@ -70,7 +70,7 @@
                 (ngSubmit)="updateMember()"
               >
                 <div class="row">
-                  <div class="col-6 col-sm-12 col-md-6 col-lg-6">
+                  <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <!--Introduction-->
                     <div class="mb-4">
                       <h4>Introduction</h4>
@@ -84,7 +84,7 @@
                       </textarea>
                     </div>
                   </div>
-                  <div class="col-6 col-sm-12 col-md-6 col-lg-6">
+                  <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <!--Looking for-->
                     <div class="mb-4">
                       <h4>Looking For</h4>
@@ -100,7 +100,7 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-6 col-sm-12 col-md-6 col-lg-6">
+                  <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <!--Interests-->
                     <div class="mb-4">
                       <h4>Interests</h4>
@@ -114,12 +114,12 @@
                       </textarea>
                     </div>
                   </div>
-                  <div class="col-6 col-sm-12 col-md-6 col-lg-6">
+                  <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <!--Location details-->
                     <div class="mb-4">
                       <h4>Location Details</h4>
                       <div class="row g-3">
-                        <div class="col-6 col-sm-12 col-md-12 col-lg-6">
+                        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
                           <label class="form-label">City:</label>
                           <input
                             type="text"
@@ -129,7 +129,7 @@
                             placeholder="Your city"
                           />
                         </div>
-                        <div class="col-6 col-sm-12 col-md-12 col-lg-6">
+                        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
                           <label class="form-label">Country:</label>
                           <input
                             type="text"
